--- a/prehtml/affobj.htm
+++ b/prehtml/affobj.htm
@@ -127,7 +127,7 @@ matrix is this:
   <td class="fill">&nbsp;
   <td class="eqcell"> <b>P</b> =
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -143,7 +143,7 @@ matrix is this:
   </table>
   <td class="eqcell"> =
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -419,7 +419,6 @@ the different matrices. The controls are as follows:
 
 <div class="lblock">
 <table class="controls-container">
-<col valign="top">
 <tr><th>L,R<td>Rotates the sprite CCW and CW, respectively.
 <tr><th>D-pad<td>Shears the sprite.
 <tr><th>D-pad+Sel<td>Moves sprite around.
@@ -821,10 +820,8 @@ the table below.
 </p>
 
 <div class="lblock">
-
-<table class="controls-container" border=0 cellpadding=1 >
-<tbody valign="top">
-<tr align="left"> <th width=48>point</th>		<th>description</th> </tr>
+<table class="controls-container">
+<tr> <th>point</th>		<th>description</th> </tr>
 <tr>
   <td> <b>p</b><sub>0</sub>, <b>q</b><sub>0</sub> </td>
   <td> Anchors in texture and screen space. </td>
@@ -847,7 +844,6 @@ the table below.
 <tr>
   <td> <b>x</b> </td>	<td>Desired object coordinates.</td>
 </tr>
-</tbody>
 </table>
 </div>
 
@@ -867,7 +863,7 @@ equations.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-ex-base]]</em>)</td>
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -902,7 +898,7 @@ in the most usable form.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-ex]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
