--- a/prehtml/bitmaps.htm
+++ b/prehtml/bitmaps.htm
@@ -190,9 +190,8 @@ The bitmap modes have the following characteristics:
 </p>
 
 <div class="lblock">
-<table id="tbl-bm-types"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-bm-types" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-bm-types]]</em></b>: Bitmap mode 
   characteristics
 </caption>
@@ -1245,9 +1244,8 @@ Look in their respective readme's for more details.
 </div>
 
 <div class="cpt_fr" style="width:222px;">
-<table id="tbl-endian"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-endian" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-endian]]</em></b>: Big endian vs little 
   endian interpretation of byte-sequence 01h, 02h, 03h, 04h
 </caption>
