--- a/prehtml/lab.htm
+++ b/prehtml/lab.htm
@@ -333,8 +333,7 @@ fig&nbsp;<em>[[ref:img-prio-demo]]</em>b; table
 </p>
 
 <div class="cblock">
-<table id="img-prio-demo" class="frame-group"
-  cellpadding=2 >
+<table id="img-prio-demo" class="frame-group">
 <tbody valign="top">
 <tr>
 <td>
@@ -355,8 +354,8 @@ fig&nbsp;<em>[[ref:img-prio-demo]]</em>b; table
 </table>
 
 <table id="tbl-prio-demo-x"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+  border=1>
+<caption>
   <b>Table <em>[[ref:tbl-prio-demo-x]]</em></b>: legend for 
   <em>[[ref:img-prio-demo]]</em>b.
 </caption>
@@ -423,7 +422,7 @@ the <i>y</i>-axis can be described by the following relation:
   <td class="eqnrcell">(<em>[[ref:eq-helix]]</em>)
   <td class="eqcell"> <b>x</b>(t) &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -585,8 +584,8 @@ hack in the function, shortly followed by the second one.
 
 <div class="cpt_fr" style="width:120px;">
 <table id="tbl-prio-hack1"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+  border=1>
+<caption>
   <b>Table <em>[[ref:tbl-prio-hack1]]</em></b>: object palette banks.
 </caption>
 <tr><th>bank	<th>color
@@ -834,8 +833,7 @@ faster. but the final implementation will be up to you.
 
 <!-- std reg table
 <div class="reg">
-<table class="reg" 
-  border=1 frame=void cellpadding=4 >
+<table class="reg" border=1>
 <caption class="reg">
   REG_<em>XXX</em> @ <code>0400:<em>[[0000]]</em>h</code>
 </caption>
@@ -855,17 +853,12 @@ faster. but the final implementation will be up to you.
 </table>
 <br>
 
-<table>
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="12%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<table class="reg-desc">
+<tr><th>bits<th>name<th>define<th>description
 <tr>
   <td>0 <td class="rclr0">
   <td>
   <td>
-</tbody>
 </table>
 </div>
 -->
@@ -884,7 +877,7 @@ faster. but the final implementation will be up to you.
 <tr>
   <td class="eqnrcell">()
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
