--- a/prehtml/mode7.htm
+++ b/prehtml/mode7.htm
@@ -353,7 +353,7 @@ operation. Given a scanline <i>h</i>, here's what we do:
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-post-ofs]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -370,9 +370,8 @@ operation. Given a scanline <i>h</i>, here's what we do:
 </ol>
 
 <div class="cblock">
-<table id="img-steps"
-  border=1 cellpadding=4 >
-<caption class="bottom">
+<table id="img-steps" border=1>
+<caption>
   Fig <em>[[ref:img-steps]]</em>a-d: The 4 steps of mode 7
 </caption>
 <tr>
@@ -410,7 +409,7 @@ to do. So what you should use is:
     <b>S</b>(&lambda;) &middot; <b>R</b>(&alpha;) 
     &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -452,7 +451,7 @@ is:
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-ofs]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -535,16 +534,17 @@ but that's not important right now. The demo is called <tt>m7_demo</tt>
 and the controls are:
 </p>
 
+<div class="lblock">
 <table class="controls-container">
-<col valign="top">
-<tr><th>D-pad<td>Strafe.
-<tr><th>L, R<td>turn left and right (i.e., rotate map right and left, 
-	respectively)
-<tr><th>A, B<td>Move up and down, though I forget which is which.
-<tr><th>Select<td>Switch between 3 different Mode7 types (A, B, C)
-<tr><th>Start<td>Resets all values (<b>a</b>= (256, 32, 256), 
-	&alpha;= 0)
+  <tr><th>D-pad<td>Strafe.
+  <tr><th>L, R<td>turn left and right (i.e., rotate map right and left, 
+    respectively)
+  <tr><th>A, B<td>Move up and down, though I forget which is which.
+  <tr><th>Select<td>Switch between 3 different Mode7 types (A, B, C)
+  <tr><th>Start<td>Resets all values (<b>a</b>= (256, 32, 256), 
+    &alpha;= 0)
 </table>
+</div>
 
 <p>
 &ldquo;Switch between 3 different Mode7 types&rdquo;?  That's what I 
@@ -739,9 +739,8 @@ are the differences:
 </ol>
 
 <div class="cpt_fr">
-<table id="tbl-divs"
-  border=1 cellpadding=2 >
-<caption align= bottom>
+<table id="tbl-divs" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-divs]]</em></b>: division tables and zoom 
 	factors. <i>a</i><sub>y</sub>=32
 </caption>
