--- a/prehtml/numbers.htm
+++ b/prehtml/numbers.htm
@@ -244,9 +244,8 @@ of course, we need the powers of two themselves. The first 11 are:
 </p>
 
 <div class="lblock">
-<table id="tbl-pot"
-  border=1 cellpadding=2 >
-<caption class="bottom"><b>Table <em>[[ref:[tbl-pot]]</em></b>: powers of two</caption>
+<table id="tbl-pot" border=1>
+<caption><b>Table <em>[[ref:[tbl-pot]]</em></b>: powers of two</caption>
 <col span=3 align="right">
 <tr align="center"><th>exponent<th>binary<th>decimal
 <tr><td> 0 <td>1			<td>1
@@ -319,8 +318,7 @@ Note the alternating sequences in the binary column.
 </p>
 
 <div class="cblock">
-<table id="tbl-count"
-  border=1 cellpadding=2 rules=cols>
+<table id="tbl-count" border=1 rules=cols>
 <col span=4 align="right">
 <tr><th> dec	<th> bin	<th> hex	<th> oct
 <tr><td>   0	<td>    0	<td>   0    <td>   0
@@ -437,7 +435,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
 <div class="cblock">
 <table id="tbl-multiply">
 <tr><td>
-  <table border=1 cellpadding=2 >
+  <table border=1>
   <caption><b>Table <em>[[ref:tbl-multiply]]</em>a</b>: decimal multiplication table</caption>
   <col span=11 align="right">
   <tr><th> x
@@ -476,7 +474,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
   </table>
 
 <td width=64><td>
-  <table border=1 cellpadding=2 >
+  <table border=1>
   <caption><b>Table <em>[[ref:tbl-multiply]]</em>b</b>: hex multiplication table</caption>
   <col span=17 align="right">
   <tr><th> x
@@ -538,7 +536,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
 <table>
 <tr>
   <td>
-  <table border=1 cellpadding=2 >
+  <table border=1>
   <caption>123 &times; 456, base ten</caption>
   <col span=5 align="right">
   <tr><td>&times; <th> 100  <th>   20 <th>    3	<th> sum
@@ -550,7 +548,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
 
   <td width=32>
   <td>
-  <table border=1 cellpadding=2 >
+  <table border=1>
   <caption>123 &times; 456, base 16</caption>
   <col span=5 align="right">
   <tr><td>&times; <th> 100  <th>   20 <th>    3	<th> sum
@@ -602,7 +600,7 @@ example, &pi; can be broken down like this:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 >
+<table border=1>
 <col span=9 width=32>
 <tr align="center">
   <th>exp
@@ -633,7 +631,7 @@ as well in binary. &pi; in binary is:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 >
+<table border=1>
 <col span=9 width=16>
 <tr align="center">
   <th>exp
@@ -674,7 +672,7 @@ would go like this:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 rules=cols>
+<table border=1 rules=cols>
 <tr><th> num  <th> / 16 <th> %16
 <tr><td> 1110 <td> 69   <td> 6
 <tr><td>   69 <td> 4    <td> 5
@@ -826,9 +824,8 @@ complement</dfn>. The table below shows how this works for 3 digits.
 </p>
 
 <div class="lblock">
-<table id="tbl-10cmpl"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-10cmpl" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-10cmpl]]</em></b>: tens' complement for 3 digits
 </caption>
 <tbody align="center">
@@ -870,7 +867,7 @@ otherwise it won't work. The actual representation of -<i>x</i> using
 <tr>
   <td class="eqnrcell">(3)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -910,11 +907,11 @@ other cases: the subtraction of 10<sup>m</sup>&minus;1 by <i>x</i> is
 just the inversion of all the bits of <i>x</i>. Take 76, for example:
 </p>
 
-<table>
+<table class="eq-container">
 <tr>
   <td class="fill">&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -976,7 +973,7 @@ comparison and bit-operations. A byte <i>x</i> containing FFh could
 mean a signed &minus;1 or an unsigned 255. In that case:
 
 <div class="lblock">
-<table border=1 cellpadding=2>
+<table border=1>
 <tr><td>FFh	<th>signed 		<th>unsigned
 <tr><th>comparison x&lt;0
   <td>true <td> false
@@ -1059,9 +1056,8 @@ yourself warned.
 </p>
 
 <div class="cblock">
-<table id="tbl-ascii"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-ascii" border=1>
+<caption>
   <b>Table <em>[[ref-tbl-ascii]]</em></b>: ASCII 0-127
 </caption>
 <tr><td>
@@ -1171,8 +1167,7 @@ float
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-float-fmt"
-  border=1 frame=void cellpadding=4 >
+<table class="reg" id="tbl-float-fmt" border=1>
 <caption class="reg">
   IEEE format for 32bit float
 </caption>
@@ -1186,25 +1181,17 @@ float
 </table>
 <br>
 
-<table>
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def">
-<tr align="left"><th>bits<th>name<th>&nbsp;<th>description
-<tbody valign="top">
-<tr class="bg0">	
+<table class="reg-desc">
+<tr><th>bits<th>name<th>description
+<tr class="bg0">
   <td>00-16<td class="rclr0">f
-  <td>&nbsp;
   <td><b>Fractional</b> part (23 bits)
-<tr class="bg1">	
+<tr class="bg1">
   <td>17-1E<td class="rclr1">e
-  <td>&nbsp;
   <td><b>Exponent</b> (8 bits)
-<tr class="bg0">	
+<tr class="bg0">
   <td>1F<td class="rclr2">s
-  <td>&nbsp;
   <td><b>Sign</b> bit.
-</tbody>
 </table>
 </div>
 
@@ -1229,7 +1216,7 @@ in a 2s' complement number). Two examples:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 >
+<table border=1>
 <tr align="center"><th>x <th>s <th> e <th> f
 <tr><th>1.0  <td>0 <td>01111111 <td> 000 0000 0000 0000 0000 0000
 <tr><th>&minus;1.0 <td>1 <td>01111111 <td> 000 0000 0000 0000 0000 0000
@@ -1312,8 +1299,8 @@ transfer that to a computer with a different endian-scheme.
 
 <div class="lblock">
 <table id="tbl-endian"
-  border=1 cellpadding=2 width=30%>
-<caption class="bottom">
+  border=1 width=30%>
+<caption>
   <b>Table <em>[[ref:tbl-endian]]</em></b>: storing 0x11223344
 </caption>
 <col span=5 align="center">
@@ -1447,11 +1434,11 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 
 <div class="lblock">
 <table id="tbl-bitops-truth">
-<caption class="bottom">
+<caption>
   <b>Table <em>[[ref:tbl-bitops-truth]]</em></b>: bit operations
 </caption>
   <tr valign="top"><td>
-    <table border=1 cellpadding=2 frame=void rules=groups>
+    <table border=1 frame=void rules=groups>
     <colgroup align="center">
     <colgroup align="center">
     <colgroup align="center">
@@ -1466,7 +1453,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
     </table>
   <td width=32>
   <td>
-    <table border=1 cellpadding=2 frame=void rules=groups>
+    <table border=1 frame=void rules=groups>
     <colgroup align="center">
     <colgroup align="center">
     <thead>
@@ -1487,7 +1474,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 </caption>
   <col span=4 width=144>
   <tr valign="bottom"><td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <tr><th align="center" colspan=3>AND
     <tr>
 	  <th><code>0Fh</code>
@@ -1501,7 +1488,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 	  <td><code><font color=red><b>0000</b></font>0101</code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <tr><th align="center" colspan=3>OR
     <tr>
 	  <th><code>0Fh</code>
@@ -1515,7 +1502,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 	  <td><code>0011<font color=red><b>1111</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <tr><th align="center" colspan=3>XOR
     <tr>
 	  <th><code>0Fh</code>
@@ -1529,7 +1516,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 	  <td><code>0011<font color=red><b>1010</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <tr><th align="center" colspan=3>NOT
     <tr><td>&nbsp;
     <tr>
@@ -1583,14 +1570,14 @@ operators like '|='.
 
 <!-- frame for masked results -->
 <table>
-<caption class="bottom">
+<caption>
   <b>Table <em>[[ref:tbl-bitops-eg]]</em>b</b>: bit-ops examples encore,
   using source <i>s</i>=35h and mask <i>m</i>=0Fh
 </caption>
 <col span=4 width=144>
 <tr valign="bottom">
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <caption><b>AND (keep bits)</b><br> <i>s &amp; m</i></caption>
     <tr>
 	  <th><code>35h</code>&nbsp;
@@ -1604,7 +1591,7 @@ operators like '|='.
 	  <td><code><font color=red><b>0000</b></font>0101</code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <caption><b>OR (set bits)</b> <br> <i>s | m</i></caption>
     <tr>
 	  <th><code>35h</code>&nbsp;
@@ -1618,7 +1605,7 @@ operators like '|='.
 	  <td><code>0011<font color=red><b>1111</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <caption><b>XOR (flip bits)</b> <br> <i>s ^ m</i></caption>
     <tr>
 	  <th><code>35h</code>&nbsp;
@@ -1632,7 +1619,7 @@ operators like '|='.
 	  <td><code>0011<font color=red><b>1010</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
     <caption><b>AND NOT (clear bits)</b> <br> <i>s &amp;~ m</i></caption>
     <tr>
 	  <th><code>&nbsp;35h</code>&nbsp;
@@ -1668,9 +1655,8 @@ variable, in pretty much the way you'd expect:
 </p>
 
 <div class="lblock">
-<table id="tbl-shift"
-  cellpadding=4 frame=void rules=groups>
-<caption class="bottom"><b>Table <em>[[ref:tbl-shift]]</em></b>: shift / rotate operations on
+<table id="tbl-shift" cellpadding=4 frame=void rules=groups>
+<caption><b>Table <em>[[ref:tbl-shift]]</em></b>: shift / rotate operations on
   byte 35h (<code>00110101</code>)</caption>
 <colgroup>
 <colgroup>
@@ -1748,9 +1734,8 @@ you'd get by sign-bit extension or not.
 </p>
 
 <div class="lblock">
-<table id="tbl-sign"
-  border=1 cellpadding=2>
-<caption class="bottom">
+<table id="tbl-sign" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-sign]]</em></b>: signed and unsigned <code>80h&gt;&gt;3</code>
 </caption>
 <col span=3 align="center">
@@ -1832,9 +1817,8 @@ constant is a power of two.
 </p>
 
 <div class="lblock">
-<table id="tbl-bitops-arith"
-  cellpadding=4 frame=void rules=groups>
-<caption class="bottom">
+<table id="tbl-bitops-arith" cellpadding=4 frame=void rules=groups>
+<caption>
   <b>Table <em>[[ref:tbl-bitops-arith]]</em></b> Arithmetic bit-ops summary
 </caption>
 <colgroup valign="bottom">
@@ -1878,9 +1862,8 @@ an 8bit computer, cool huh?
 </p>
 
 <div class="lblock">
-<table id="tbl-adder"
-  border=1 cellpadding=2 frame=void rules=groups width=10%>
-<caption class="bottom">
+<table id="tbl-adder" border=1 frame=void rules=groups width=10%>
+<caption>
   <b>Table <em>[[ref:tbl-adder]]</em></b>: 1-bit adder
 </caption>
 <colgroup align="center">
