--- a/prehtml/sndsqr.htm
+++ b/prehtml/sndsqr.htm
@@ -124,7 +124,7 @@ other with some trickery that does not concern us at this moment.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-wave]]</em>)
   <td class="eqcell">
-  <table cellpadding=0 >
+  <table cellpadding=0>
   <tr>
     <td class="bdrB"> d&sup2; 
   <tr>
@@ -144,7 +144,7 @@ General solution(s):
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-wave-sols]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -240,9 +240,8 @@ notes don't <i>quite</i> fit in exactly.
 </p>
 
 <div class="cblock">
-<table id="tbl-oct0"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-oct0" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-oct0]]</em></b>: notes &amp; frequencies of 
   octave 0
 </caption>
@@ -307,13 +306,13 @@ they're all doing the same thing.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-ftrans]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody valign="middle">
   <tr>
     <td><i>A</i><sub>m</sub>
     <td> =
     <td>
-      <table cellpadding=2 >
+      <table>
       <tr><td class="bdrB"> 2
       <tr><td> T
       </table>
@@ -323,7 +322,7 @@ they're all doing the same thing.
     <td><i>B</i><sub>m</sub>
     <td> =
     <td>
-      <table cellpadding=2 >
+      <table>
       <tr><td class="bdrB"> 2
       <tr><td> T
       </table>
@@ -360,7 +359,7 @@ follow from eq&nbsp;<em>[[ref:eq-ftrans]]</em>.
   <td class="eqcell">
     <i>A</i><sub>m</sub> = 
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrB">2
@@ -373,7 +372,7 @@ follow from eq&nbsp;<em>[[ref:eq-ftrans]]</em>.
   </table>
   <td> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrB">2<i>T</i>
@@ -428,9 +427,8 @@ which IMHO makes more sense than the other two.
 </p>
 
 <div class="cblock">
-<table id="tbl-snd-names"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-snd-names" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-snd-names]]</em></b>: Sound register nomenclature.
 </caption>
 <tr align="center">
@@ -508,8 +506,7 @@ set at least some bits on each of these to get anything to work.
 </p>
 
 <div class="reg">
-<table class="reg" 
-  border=1 frame=void cellpadding=4 >
+<table class="reg" border=1>
 <caption class="reg">
   REG_SNDDMGCNT (SOUNDCNT_L / SGCNT0_L ) @ <code>0400:0080h</code>
 </caption>
@@ -532,11 +529,7 @@ set at least some bits on each of these to get anything to work.
 </table>
 
 <table class="reg-desc">
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width=128>
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">	
   <td>0-2<td class="rclr2">LV
   <td> &nbsp;
@@ -553,7 +546,6 @@ set at least some bits on each of these to get anything to work.
   <td>C-F<td class="rclr1">R1-R4
   <td>SDMG_RSQR1, SDMG_RSQR2, SDMG_RWAVE, SDMG_RNOISE
   <td>Channels 1-4 on right
-</tbody>
 </table>
 </div>
 
@@ -588,8 +580,7 @@ class="num">8</span>) | ((_rmode)&lt;&lt;<span class="num">12</span>) )
 </pre><br>
 
 <div class="reg">
-<table class="reg" 
-  border=1 frame=void cellpadding=4 >
+<table class="reg" border=1>
 <caption class="reg">
   REG_SNDDSCNT (SOUNDCNT_H / SGCNT0_H) @ <code>0400:0082h</code>
 </caption>
@@ -612,11 +603,7 @@ class="num">8</span>) | ((_rmode)&lt;&lt;<span class="num">12</span>) )
 </table>
 
 <table class="reg-desc">
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width=128>
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">	
   <td>0-1<td class="rclr0">DMGV
   <td>SDS_DMG25, SDS_DMG50, SDS_DMG100
@@ -657,7 +644,6 @@ class="num">8</span>) | ((_rmode)&lt;&lt;<span class="num">12</span>) )
     <span class="rclr4">BF</span>
   <td>SDS_BR, SDS_BL, SDS_BTMR0, SDS_BTMR1, SDS_BRESET
   <td>As bits 8-B, but for DSound B
-</tbody>
 </table>
 </div>
 
@@ -670,8 +656,7 @@ you need to set bit 7 there.
 </p>
 
 <div class="reg">
-<table class="reg" 
-  border=1 frame=void cellpadding=4 >
+<table class="reg" border=1>
 <caption class="reg">
   REG_SNDSTAT (SOUNDCNT_X / SGCNT1) @ <code>0400:0084h</code>
 </caption>
@@ -690,11 +675,7 @@ you need to set bit 7 there.
 </table>
 
 <table class="reg-desc">
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width=128>
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">	
   <td class="rof">0-3<td class="rclr1">1A-4A
   <td>SSTAT_SQR1, SSTAT_SQR2, SSTAT_WAVE, SSTAT_NOISE
@@ -708,7 +689,6 @@ you need to set bit 7 there.
     be heard at all. Set this <b>before</b> you do anything else: 
     the other registers can't be accessed otherwise, see GBATek 
     for details. 
-</tbody>
 </table>
 </div>
 
@@ -759,7 +739,7 @@ denominator in eq&nbsp;<em>[[ref:eq-fvsr]]</em> approaches 0).
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fvsr]]</em>a)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center" valign="middle">
   <tr>
     <td rowspan=2> <i>f</i>(<i>R</i>) &nbsp;=&nbsp;
@@ -789,14 +769,11 @@ they have exactly the same function.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-snd1cnt"
-  border=1 frame=void cellpadding=4 >
-<caption class="reg">
-<span class="nobr">
-  REG_SND1CNT (SOUND1CNT_H / SG10_H) @ <code>0400:0062h</code></span>
+<table class="reg" id="tbl-reg-snd1cnt" border=1>
+<caption class="reg nowrap">
+  REG_SND1CNT (SOUND1CNT_H / SG10_H) @ <code>0400:0062h</code>
   <br> and <br>
-<span class="nobr">
-  REG_SND2CNT (SOUND2CNT_L / SG20_L) @ <code>0400:0068h</code></span>
+  REG_SND2CNT (SOUND2CNT_L / SG20_L) @ <code>0400:0068h</code>
 </caption>
 <tr class="bits">
   <td>F E D C<td>B<td>A 9 8<td>7 6<td class="wof">5 4 3 2 1 0
@@ -809,11 +786,7 @@ they have exactly the same function.
 </table>
 
 <table class="reg-desc">
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="12%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">	
   <td class="wof">0-5<td class="rclr4">L
   <td>SSQR_LEN#
@@ -849,7 +822,6 @@ they have exactly the same function.
     sustaining sound, set initial volume to 15 and an increasing 
     direction. To vary the <i>real</i> volume, remember 
     <code>REG_SNDDMGCNT</code>.
-</tbody>
 </table>
 </div>
 
@@ -865,7 +837,7 @@ they have exactly the same function.
   <td class="eqcell">
     <i>A</i><sub>m</sub> = 
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrB">2
@@ -901,14 +873,11 @@ they really did sound the same to me.
 </p><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-snd1freq"
-  border=1 frame=void cellpadding=4 >
-<caption class="reg">
-<span class="nobr">
-  REG_SND1FREQ (SOUND1CNT_X / SG11) @ <code>0400:0062h</code></span>
+<table class="reg" id="tbl-reg-snd1freq" border=1>
+<caption class="reg nowrap">
+  REG_SND1FREQ (SOUND1CNT_X / SG11) @ <code>0400:0062h</code>
   <br> and <br>
-<span class="nobr">
-  REG_SND2FREQ (SOUND2CNT_H / SG21) @ <code>0400:006Ch</code></span>  
+  REG_SND2FREQ (SOUND2CNT_H / SG21) @ <code>0400:006Ch</code>
 </caption>
 <tr class="bits">
   <td class="wof">F<td>E<td>D C B
@@ -921,11 +890,7 @@ they really did sound the same to me.
 </table>
 
 <table class="reg-desc">
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="12%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">	
   <td class="wof">0-A<td class="rclr0">R
   <td>SFREQ_RATE#
@@ -950,13 +915,11 @@ they really did sound the same to me.
     as well and due to its write-only nature a simple 
     &lsquo;<code>|= SFREQ_RESET</code>&rsquo; will <i>not</i> suffice
     (even though it might on emulators).
-</tbody>
 </table>
 </div><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-snd1sweep"
-  border=1 frame=void cellpadding=4 >
+<table class="reg" id="tbl-reg-snd1sweep" border=1>
 <caption class="reg">
   REG_SND1SWEEP (SOUND1CNT_L / SG10_L) @ <code>0400:0060h</code>
 </caption>
@@ -970,11 +933,7 @@ they really did sound the same to me.
 </table>
 
 <table class="reg-desc">
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="12%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">	
   <td>0-2<td class="rclr0">N
   <td>SSW_SHIFT#
@@ -991,7 +950,6 @@ they really did sound the same to me.
   <td>Sweep <b>step-time</b>. The time between sweeps is measured in 
     128 Hz (not kHz!): &Delta;t = <i>T</i>/128 ms &asymp; 7.8<i>T</i> 
     ms; if <i>T</i>=0, the sweep is disabled. 
-</tbody>
 </table>
 </div>
 
@@ -1055,7 +1013,7 @@ the shift, the slower the sweep.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-sweep]]</em>b)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -1117,7 +1075,7 @@ frequency <i>f</i> and octave <i>c</i>. We also have a base octave
 <tr>
   <td class="fill">&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -1142,7 +1100,7 @@ this.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-noterate]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <col align="right">
   <col align="center">
   <col align="left">
@@ -1431,7 +1389,6 @@ with L and R; the background color changes with it. B plays
 
 <div class="lblock">
 <table class="controls-container">
-<tbody valign="top">
 <tr>
   <th>A / D-pad <td>Play a note
     <table>
@@ -1446,7 +1403,6 @@ with L and R; the background color changes with it. B plays
   wraps around)
 <tr>
   <th> B    <td>Play a little tune.
-</tbody>
 </table>
 </div>
 
