--- a/prehtml/tte.htm
+++ b/prehtml/tte.htm
@@ -600,9 +600,8 @@ abbreviations that need to be clarified.
 </ul>
 
 <div class="lblock">
-<table id="tbl-tte-family"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-tte-family" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-tte-family]]</em></b>: TTE render family 
   indicators and initializers. 4bpp Tiles can be row or column major 
   (<code>crh4r</code> or <code>chr4c</code>).
@@ -642,9 +641,8 @@ abbreviations that need to be clarified.
 </div><br>
 
 <div class="lblock">
-<table id="tbl-tte-drawg"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-tte-drawg" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-tte-drawg]]</em></b>: Render type summary.
 </caption>
 <tr>
@@ -692,9 +690,8 @@ they have helped me read my own code.
 </p>
 
 <div class="lblock">
-<table id="tbl-tte-brevs"
-  border=1 cellpadding=4 >
-<caption class="bottom">
+<table id="tbl-tte-brevs" border=1 cellpadding=4>
+<caption>
 Table&nbsp;<em>[[ref:tbl-tte-brevs]]</em>. Abbreviations used in 
 rendering code.
 </caption>
@@ -3051,9 +3048,8 @@ thing, depending on the number of parameters.
 </p>
 
 <div class="cblock">
-<table id="tbl-tte-cmd"
-  border=1 cellpadding=2 width= 70%>
-<caption class="bottom">
+<table id="tbl-tte-cmd" border=1 width= 70%>
+<caption>
   <b>Table <em>[[ref:tbl-tte-cmd]]</em></b>: Available TTE formatting 
   tags.
 </caption>
@@ -3481,9 +3477,8 @@ The ones you'll encounter most are the following:
 </p>
 
 <div class="lblock">
-<table id="tbl-vt100"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-vt100" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-vt100]]</em></b>: Common VT100 sequences
 </caption>
 
@@ -3585,9 +3580,8 @@ representing bigger numbers.
 </p>
 
 <div class="cblock">
-<table id="tbl-utf8"
-  border=1 cellpadding=4 >
-<caption class="bottom">
+<table id="tbl-utf8" border=1 cellpadding=4>
+<caption>
 Table&nbsp;<em>[[ref:tbl-utf8]]</em>. UTF-8 to u32 conversion table.
 </caption>
 <tr> 
@@ -3776,9 +3770,8 @@ followed by death. Good luck!&rdquo;
 </blockquote>
 
 <div class="lblock">
-<table id="tbl-tte-profile"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-tte-profile" border=1>
+<caption>
   <b>Table <em>[[ref:tbl-tte-profile]]</em></b>: 
   Renderer times. Conditions: 194 chars, verdana 9, 
   ROM code, default waits, -O2.
