--- a/prehtml/video.htm
+++ b/prehtml/video.htm
@@ -96,7 +96,7 @@ cycles per scanline. You can find a summary of timing details in
 table <em>[[ref:tbl-disp-timing]]</em>.
 </p><br>
 
-<table width=80%>
+<table class="frame-group" width=80%>
 <tr align="center">
   <td>
   <div class="cpt" style="width:192px;">
@@ -105,9 +105,8 @@ table <em>[[ref:tbl-disp-timing]]</em>.
   </div>
 
   <td>
-	<table id="tbl-disp-timing" 
-	  border=1 cellpadding=2>
-	<caption class="bottom">
+	<table id="tbl-disp-timing" border=1>
+	<caption>
 	  <b>Table <em>[[ref:tbl-disp-timing]]</em></b>: Display timing details
 	</caption>
 	<col>
@@ -255,8 +254,7 @@ been explained in the
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-dispcnt"
-  border=1 frame=void cellPadding=4 >
+<table class="reg" id="tbl-reg-dispcnt" border=1>
 <caption class="reg">
   REG_DISPCNT @ <code>0400:0000h</code>
 </caption>
@@ -280,12 +278,8 @@ been explained in the
 	<td class="rclr0">Mode
 </table>
 
-<table>
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="12%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<table class="reg-desc">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">
   <td>0-2 <td class="rclr0">Mode
   <td>DCNT_MODEx. <i>DCNT_MODE#</i>
@@ -330,7 +324,6 @@ been explained in the
   <td>Enables the use of windows 0, 1 and Object window, respectively.
     Windows can be used to mask out certain areas (like the 
     lamp did in Zelda:LTTP).
-</tbody>
 </table>
 </div>
 
@@ -356,8 +349,7 @@ know how that works, don't you?
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-dispstat"
-  border=1 frame=void cellPadding=4 >
+<table class="reg" id="tbl-reg-dispstat" border=1>
 <caption class="reg">
   REG_DISPSTAT @ <code>0400:0004h</code>
 </caption>
@@ -375,12 +367,8 @@ know how that works, don't you?
   <td class="rclr0">VbS
 </table>
 
-<table>
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="15%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<table class="reg-desc">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">
   <td>0<td class="rclr0">VbS
   <td>DSTAT_IN_VBL
@@ -414,13 +402,11 @@ know how that works, don't you?
   <td><i>DSTAT_VCT#</i>
   <td>VCount trigger value. If the current scanline is at this value, 
     bit 2 is set and an interrupt is fired if requested.
-</tbody>
 </table>
 </div><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-vcount"
-  border=1 frame=void cellPadding=4 >
+<table class="reg" id="tbl-reg-vcount" border=1>
 <caption class="reg">
   REG_VCOUNT @ <code>0400:0006h</code> (read-only)
 </caption>
@@ -432,15 +418,11 @@ know how that works, don't you?
   <td class="rclr0">Vc
 </table>
 
-<table>
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-<tr align="left"><th>bits<th>name<th>description
-<tbody valign="top">
+<table class="reg-desc">
+<tr><th>bits<th>name<th>description
 <tr class="bg0">
   <td>0-7 <td class="rclr0">Vc
   <td>Vertical count. Range is [0,227]
-</tbody>
 </table>
 </div>
 
