--- a/prehtml/first.htm
+++ b/prehtml/first.htm
@@ -503,10 +503,9 @@ class="keyw">volatile</span> u32*)(MEM_IO+<span class="num">0x0000</span>))
 </pre>
 
 <div class="cblock">
-<table border=1 cellpadding=2 width="90%">
-<col align="right">
+<table class="c1-r" border=1 width="90%">
 <tr>
-  <th width=130>code	<th>type	<th>description
+  <th>code	<th>type	<th>description
 <tr>
   <td><code>MEM_IO+0x0000</code>
   <td>Address
