--- a/prehtml/hardware.htm
+++ b/prehtml/hardware.htm
@@ -210,7 +210,7 @@ section on memory.
 </p>
 
 <div class="cblock">
-<table border=1 cellpadding=2>
+<table border=1>
 <col span=8 valign= top>
 <tr>
 <th>area <th>start <th>end <th>length <th>port-size <th>description
