--- a/prehtml/intro.htm
+++ b/prehtml/intro.htm
@@ -256,7 +256,7 @@ number of html-tag conventions. To make sure we're all on the same
 page here's a list:
 </p>
 <div class="lblock">
-<table border=1 cellpadding=2 >
+<table border=1>
 <tr><th>Type	<th>notation	<th>example
 <tr><td>bit n in a <code>foo</code>		<td><code>foo</code>{n}	
   <td><code>REG_DISPCNT{4}</code> (active page bit)
@@ -276,7 +276,7 @@ depending on how old your browser is. These are:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 >
+<table border=1>
 <tr><th>symbol<th>description
 <tr><td>&alpha;, &beta;, &gamma;	<td>Greek letters
 <tr><td>&asymp;		<td>approximately
@@ -302,7 +302,7 @@ quite common. Anyway, here's a list.
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 >
+<table border=1>
 <tr><th>base type	<th>alt name <th>unsigned	<th>signed	<th>volatile
 <tr><th>char		<td>byte	 <td>u8			<td>s8		<td>vu8 / vs8
 <tr><th>short		<td>halfword <td>u16		<td>s16		<td>vu16 / vs16
@@ -347,8 +347,7 @@ like this:
 </p>
 
 <div class="reg">
-<table class="reg"
-  border=1 frame=void cellPadding=4 >
+<table class="reg" border=1>
 <caption class="reg">
   REG_DISPSTAT @ <code>0400:0004h</code>
 </caption>
@@ -377,12 +376,8 @@ and also gives the #define or #defines I use for that bit:
 </p>
 
 <div class="reg">
-<table>
-  <col class="bits" width=40>
-  <col class="bf" width="8%">
-  <col class="def" width="15%">
-<tr align="left"><th>bits<th>name<th>define<th>description
-<tbody valign="top">
+<table class="reg-desc">
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">
   <td>0 <td class="rclr0">VbS
   <td>DSTAT_IN_VBL
@@ -394,7 +389,6 @@ and also gives the #define or #defines I use for that bit:
   <td><i>DSTAT_VCT#</i>
   <td>VCount trigger value. If the current scanline is at this value, 
     bit 2 is set and an interrupt is fired if requested.
-</tbody>
 </table>
 </div>
 
