--- a/prehtml/matrix.htm
+++ b/prehtml/matrix.htm
@@ -68,7 +68,7 @@ when we get to matrices.
   <td class="eqnrcell">(<em>[[ref:eq-vec-def]]</em>)
   <td class="eqcell"> <b>u</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -157,7 +157,7 @@ with <b>w = u + v</b> we have
   <td class="eqcell"> 
     <b>w</b> &nbsp;=&nbsp; <b>u</b> + <b>v</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -191,7 +191,7 @@ note that subtraction can also be written as
   <td class="eqcell"> 
     <b>v</b> &nbsp;=&nbsp; <i>c</i><b>u</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -252,7 +252,7 @@ the angle between the two, the cosine can be found via
   <td class="eqcell"> 
     cos(&alpha;) &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrB"><b>u &middot; v</b>
@@ -334,7 +334,7 @@ eq&nbsp;<em>[[ref:img-vec-cross]]</em>.
   <td class="eqcell"> 
     <b>w</b> &nbsp;=&nbsp; <b>u</b> &times; <b>v</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -452,7 +452,7 @@ M-dimensional vectors and <i>c</i> and <i>d</i> scalars, then:
 </p>
 
 <div class="lblock">
-<table>
+<table class="eq-container">
 <tr><td><b>u + v = v + u</b> <td width=16><td>Commutativity
 <tr><td><b>(u + v) + w = u + (v + w)</b> <td><td>Associativity
 <tr><td><b>u + 0 = 0 + u = u</b>
@@ -470,7 +470,7 @@ M-dimensional vectors and <i>c</i> and <i>d</i> scalars, then:
 </p>
 
 <div class="lblock">
-<table>
+<table class="eq-container">
 <tr><td><b>u &middot; (v + w) = (u + v) &middot; w</b> <td width=16><td>
 <tr><td><b>u &middot;</b> (c&middot;<b>v</b>) = (c&middot;<b>u</b>)<b> &middot; v</b> = c&middot;(<b>u &middot; v</b>)
 <tr><td>&nbsp;
@@ -502,11 +502,11 @@ initially used as shorthand to solve a system of linear equations.
 For example, the system using variables <i>x, y, z</i>:
 </p>
 
-<table id="eq-eqset">
+<table id="eq-eqset" class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-eqset]]</em>a)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="right">
   <tr>
     <td>  <i>x</i> <td>&minus; <td>2<i>y</i> <td>+ <td>  <i>z</i> 
@@ -526,11 +526,11 @@ For example, the system using variables <i>x, y, z</i>:
 can be written down more succinctly using matrices as: 
 </p>
 
-<table>
+<table class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-eqset]]</em>b)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="right">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -545,7 +545,7 @@ can be written down more succinctly using matrices as:
   <td width=64 align="center">or
   <td class="eqnrcell">(9c)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="right">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -599,7 +599,7 @@ double index.
 	  <b>a</b><sub>1</sub> <b>&hellip; a</b><sub>n</sub>
 	<big>]</big> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="right">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -643,7 +643,7 @@ Let's return to eq&nbsp;<em>[[ref:eq-eqset]]</em> for a while, if we use
 coefficient matrix, we can rewrite eq&nbsp;<em>[[ref:eq-eqset]]</em>a to
 </p>
 
-<table>
+<table class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-eqset]]</em>d)
   <td class="eqcell">
@@ -860,7 +860,7 @@ formula for one, namely the 2x2 case:
   <td class="eqnrcell">(<em>[[ref:eq-2d-inv]]</em>)
   <td class="eqcell"> <b>A</b> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -877,7 +877,7 @@ formula for one, namely the 2x2 case:
   <td width=32>&nbsp;
   <td class="eqcell"> <b>A</b><sup>&minus;1</sup> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrB"> 1
@@ -886,7 +886,7 @@ formula for one, namely the 2x2 case:
   </tbody>
   </table>
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -923,7 +923,7 @@ column vectors of <b>E</b>. <i>c</i> is a scalar.
 </p>
 
 <div class="lblock">
-<table cellpadding=2 >
+<table class="eq-container">
 <tr>
   <td><b>A + B</b> = <b>B + A</b>
 <tr>
@@ -1081,14 +1081,14 @@ rewrite our vectors and coordinates, to matrices and vectors,
 we get
 </p>
 
-<table>
+<table class="eq-container">
 <tr>
   <td class="fill">&nbsp;
   <td class="eqcell"> 
     <b>M</b> &nbsp;=&nbsp;
 	<big>[</big> <b>i &nbsp; j</b> <big>]</big> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1104,7 +1104,7 @@ we get
   </table>
   <td class="eqcell">&nbsp; , &nbsp; <b>x</b> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1119,7 +1119,7 @@ we get
     <b>M</b>&prime; &nbsp;=&nbsp;
 	<big>[</big> <b>u &nbsp; v</b> <big>]</big> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1135,7 +1135,7 @@ we get
   </table>
   <td class="eqcell">&nbsp; , &nbsp; <b>x</b>&prime; &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 >
+  <table class="eqtbl">
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1147,7 +1147,7 @@ we get
   </table>
 </table>
 
-<table>
+<table class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-coords]]</em>c)
   <td class="eqcell">
