--- a/prehtml/setup.htm
+++ b/prehtml/setup.htm
@@ -546,9 +546,8 @@ of the options.
 
 
 <div class="lblock">
-<table id="tbl-tonc-cfg"
-  border=1 cellpadding=2 frame=void rules=cols>
-<caption class="bottom">
+<table id="tbl-tonc-cfg" border=1 frame=void rules=cols>
+<caption>
   <b>Table <em>[[ref:tbl-tonc-cfg]]</em></b>: building tonc projects.
 </caption>
 <tr align="left">
@@ -1197,9 +1196,8 @@ as well:
 </p>
 
 <div class="lblock">
-<table id="tbl-make-vardef"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-make-vardef" border=1>
+<caption>
   <b>Table</b> <em>[[ref:tbl-make-vardef]]</em>: variable definitions.
 </caption>
 <tr>
@@ -1265,9 +1263,8 @@ of the automatic variables available; for a full list, go to the
 
 
 <div class="lblock">
-<table id="tbl-make-autovars"
-  border=1 cellpadding=2 >
-<caption class="bottom">
+<table id="tbl-make-autovars" border=1>
+<caption>
   <b>Table</b> <em>[[ref:tbl-make-autovars]]</em>: automatic variables for rules.
 </caption>
 <tr><th> $&lt;	</th><td> Name of the first prerequisite</td></tr>
